# NutritionPlanner-System

./: README.md
Backend/: CMakeLists.txt  README.md  bmi_calculator.cpp  bmi_calculator.h  bmr_calculator.cpp  bmr_calculator.h  diet_plan.cpp  diet_plan.h  diet_plan_service.cpp  diet_plan_service.h  food_item.cpp  food_item.h  harrisbenedict_bmr_strategy.cpp  harrisbenedict_bmr_strategy.h  imperial_bmi_strategy.cpp  imperial_bmi_strategy.h  json_highlighter.cpp  json_highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metric_bmi_strategy.cpp  metric_bmi_strategy.h  mifflinstjeor_bmr_strategy.cpp  mifflinstjeor_bmr_strategy.h  nutritionserver.cpp  nutritionserver.h  patient.cpp  patient.h  patient_service.cpp  patient_service.h  system_monitor_widget.cpp  system_monitor_widget.h
Frontend/: README.md  package-lock.json  package.json
Frontend/public/: index.html
Frontend/src/: App.jsx  index.css  index.jsx
Frontend/src/components/: DietPlan.js  patientForm.js  usePatientForm.js
Frontend/src/services/: api.js
Frontend/src/styles/: DietPlan.css  form.css
